Change: translateable header (title/screenName)

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -2,5 +2,7 @@
   "buttons": {
     "check": "Check",
     "support": "Support Us"
-  }
+  },
+  "title": "Is <span class=\"header-screen_name\">@{{screenName}}</span><br> shadowbanned on Twitter?",
+  "screenNameDefault": "username"
 }
